--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -4,8 +4,8 @@
   <form method="POST">
     {% csrf_token %}
     <div class="form-group">
-      <label for="id_subject">Email</label>
-      <input type="text" class="form-control" id="id_subject" name="email">
+      <label for="id_subject">Username</label>
+      <input type="text" class="form-control" id="id_subject" name="username">
     </div>
     <div class="form-group">
       <label for="id_message">Password</label>
@@ -13,4 +13,5 @@
     </div>
     <button type="submit" class="btn btn-success">Login</button>
   </form>
+  <a href="newUser">Create Account</a>
 {% endblock %}
