Added navigation between different pages and now have the dashboard app and account app

--- a/fantasyFootball/templates/base.html
+++ b/fantasyFootball/templates/base.html
@@ -1,16 +1,16 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Fantasy Football</a>
+    <a class="navbar-brand" href="/">Fantasy Football</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link active" href="#">Home<span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="#">Standings</a>
+        <a class="nav-item nav-link" href="{% url 'standings' %}">Standings</a>
         <a class="nav-item nav-link" href="#">League</a>
-        <a class="nav-item nav-link" href="#">My Account</a>
+        <a class="nav-item nav-link" href="{% url 'account' %}">My Account</a>
       </div>
     </div>
 </nav>
