Full account creation and login implemented. Using extended User model to create a profile for each new user.

--- a/fantasyFootball/templates/base.html
+++ b/fantasyFootball/templates/base.html
@@ -7,10 +7,11 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="#">Home<span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="{% url 'standings' %}">Standings</a>
+        <a class="nav-item nav-link active" href="/home/">Home<span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="#">Standings</a>
         <a class="nav-item nav-link" href="#">League</a>
-        <a class="nav-item nav-link" href="{% url 'account' %}">My Account</a>
+        <a class="nav-item nav-link" href="/account/">My Account</a>
+        <a class="nav-item nav-link" href="/logout/">Logout</a>
       </div>
     </div>
 </nav>
