--- a/account/templates/account/profile.html
+++ b/account/templates/account/profile.html
@@ -1,5 +1,20 @@
 {% extends "base.html" %}
 
 {% block page_content %}
-<h1> Welcome to your account!</h1>
+<div class="container">
+    <h2>My Account</h2>
+    <div class="row my-2">
+        <div class="col-lg-8 order-lg-2">
+            <div class="tab-content py-4">
+                    <h5 class="mb-3">User Profile</h5>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <p>Welcome, {{ user.get_username }}</p>
+                        </div>
+                    </div>
+                </div>
+           </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
