--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -31,5 +31,6 @@
 <input type="submit" value="login">
 <input type="hidden" name="next" value="{{ next }}">
 </form>
+<a href="account/create">Create Account</a>
 
 {% endblock %}
