Added some more UI elements to the home page.Starting to implement displaying the currently selected week.

--- a/fantasyFootball/templates/fantasyFootball/base.html
+++ b/fantasyFootball/templates/fantasyFootball/base.html
@@ -1,4 +1,6 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<!--{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'customStyle.css' %}">-->
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/">Fantasy Football</a>
@@ -8,8 +10,6 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link active" href="/home/">Home<span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="#">Standings</a>
-        <a class="nav-item nav-link" href="#">League</a>
         <a class="nav-item nav-link" href="/account/">My Account</a>
         <a class="nav-item nav-link" href="/logout/">Logout</a>
       </div>
