--- a/league/templates/league/createLeague.html
+++ b/league/templates/league/createLeague.html
@@ -1,6 +1,6 @@
 {% extends "fantasyFootball/base.html" %} {% block page_content %}
 <h1> Create a new League</h1>
-<form action="create/" method="POST">
+<form action="" method="POST">
     {% csrf_token %} {{ form }}
     <input type="submit" value="Submit">
 </form>
