--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -1,36 +1,30 @@
-{% extends "fantasyFootball/base.html" %}
-
-{% block page_content %}
-
-{% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
-{% endif %}
-
-{% if next %}
-    {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
+{% extends "fantasyFootball/base.html" %} {% block page_content %}
+<div class="container">
+    {% if form.errors %}
+    <p>Your username and password didn't match. Please try again.</p>
+    {% endif %} {% if next %} {% if user.is_authenticated %}
+    <p>Your account doesn't have access to this page. To proceed, please login with an account that has access.</p>
     {% else %}
     <p>Please login to see this page.</p>
-    {% endif %}
-{% endif %}
+    {% endif %} {% endif %}
 
-<form method="post" action="{% url 'login' %}">
-{% csrf_token %}
-<table>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-</table>
+    <form method="POST" action="{% url 'login' %}">
+        {% csrf_token %}
+        <table>
+            <tr>
+                <td>{{ form.username.label_tag }}</td>
+                <td>{{ form.username }}</td>
+            </tr>
+            <tr>
+                <td>{{ form.password.label_tag }}</td>
+                <td>{{ form.password }}</td>
+            </tr>
+        </table>
 
-<input type="submit" value="login">
-<input type="hidden" name="next" value="{{ next }}">
-</form>
-<a href="account/create">Create Account</a>
-
+        <!--<input type="submit" value="login">-->
+        <button type="submit" class="btn btn-primary" value="login">Login</button>
+        <input type="hidden" name="next" value="{{ next }}">
+    </form>
+    <a href="account/create">Create Account</a>
+</div>
 {% endblock %}
