Home page now pulling data from the DB defaulting to week 1 for now. DB is now populated with week 1 data and util to populate all weeks is done.

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -64,7 +64,7 @@
                 {% for currentGame in gameData %}
                 <div class="card text-center">
                     <div class="card-body">
-                        <h6 class="card-title">{{ currentGame.homeTeam.name }} @ {{ currentGame.awayTeam.name }}</h6>
+                        <h6 class="card-title">{{ currentGame.homeTeam }} @ {{ currentGame.awayTeam }}</h6>
                         <h7 class="card-text">{{ currentGame.homeScore }} - {{ currentGame.awayScore }}</h7>
                         <!--<img src="/static/media/bears.png" alt="Bears" class="img-thumbnail rounded float left img-fluid">-->
                     </div>
