--- a/fantasyFootball/templates/fantasyFootball/base.html
+++ b/fantasyFootball/templates/fantasyFootball/base.html
@@ -8,16 +8,16 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="/home/">Home<span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="/account/">My Account</a>
-        <a class="nav-item nav-link" href="/logout/">Logout</a>
-      </div>
+        <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="/home/">Home<span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="/account/">My Account</a>
+            <a class="nav-item nav-link" href="/picks/">My Picks</a>
+            <a class="nav-item nav-link" href="/logout/">Logout</a>
+        </div>
     </div>
 </nav>
 
-{% block page_content %}
-{% endblock %}
+{% block page_content %} {% endblock %}
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
