--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -48,6 +48,18 @@
                       <option>Week 3</option>
                       <option>Week 4</option>
                       <option>Week 5</option>
+                      <option>Week 6</option>
+                      <option>Week 7</option>
+                      <option>Week 8</option>
+                      <option>Week 9</option>
+                      <option>Week 10</option>
+                      <option>Week 11</option>
+                      <option>Week 12</option>
+                      <option>Week 13</option>
+                      <option>Week 14</option>
+                      <option>Week 15</option>
+                      <option>Week 16</option>
+                      <option>Week 17</option>
                     </select>
                     </div>
                 </form>
