--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -39,35 +39,38 @@
         <hr> {% if userLeagues %}
         <div class="row">
             <div class="col">
+                <h4>Leaderboard</h4>
                 <form action="" method="post">
                     {% csrf_token %}
                     <div class="form-group">
                         <select class="form-control">
-                      <option>Week 1</option>
-                      <option>Week 2</option>
-                      <option>Week 3</option>
-                      <option>Week 4</option>
-                      <option>Week 5</option>
-                      <option>Week 6</option>
-                      <option>Week 7</option>
-                      <option>Week 8</option>
-                      <option>Week 9</option>
-                      <option>Week 10</option>
-                      <option>Week 11</option>
-                      <option>Week 12</option>
-                      <option>Week 13</option>
-                      <option>Week 14</option>
-                      <option>Week 15</option>
-                      <option>Week 16</option>
-                      <option>Week 17</option>
+                      <option value="1">Week 1</option>
+                      <option value="2">Week 2</option>
+                      <option value="3">Week 3</option>
+                      <option value="4">Week 4</option>
+                      <option value="5">Week 5</option>
+                      <option value="6">Week 6</option>
+                      <option value="7">Week 7</option>
+                      <option value="8">Week 8</option>
+                      <option value="9">Week 9</option>
+                      <option value="10">Week 10</option>
+                      <option value="11">Week 11</option>
+                      <option value="12">Week 12</option>
+                      <option value="13">Week 13</option>
+                      <option value="14">Week 14</option>
+                      <option value="15">Week 15</option>
+                      <option value="16">Week 16</option>
+                      <option value="17">Week 17</option>
                     </select>
                     </div>
+                    <input type="submit" value="Go to Week">
                 </form>
                 {% for currentGame in gameData %}
                 <div class="card text-center">
                     <div class="card-body">
                         <h6 class="card-title">{{ currentGame.homeTeam }} @ {{ currentGame.awayTeam }}</h6>
                         <h7 class="card-text">{{ currentGame.homeScore }} - {{ currentGame.awayScore }}</h7>
+                        <h6 class="card-title">Your pick: {{ currentGame.pick }} </h6>
                         <!--<img src="/static/media/bears.png" alt="Bears" class="img-thumbnail rounded float left img-fluid">-->
                     </div>
                 </div>
