--- a/picks/templates/picks/picks.html
+++ b/picks/templates/picks/picks.html
@@ -5,29 +5,65 @@
         <div class="card text-center">
             <h1>My Picks</h1>
         </div>
-
-        {% for currentPick in pickData %}
-        <fieldset class="form-group"></fieldset>
-        <div class="row">
-            <legend class="col-form-label col-sm-2 pt-0">Game</legend>
-            <div class="col-sm-10">
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="{{ currentPick.homeTeam }}" id="{{ currentPick.homeTeam }}" value="home">
-                    <label class="form-check-label" for="{{ currentPick.homeTeam }}">
+        <form action="" method="POST">
+            {% for currentPick in pickData %}
+            <fieldset class="form-group"></fieldset>
+            {% if currentPick.pick == currentPick.homeTeam %}
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.homeTeam }}" value="{{ currentPick.homeTeam }}" checked>
+                        <label class="form-check-label" for="{{ currentPick.homeTeam }}">
                             {{ currentPick.homeTeam }}
                   </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="{{ currentPick.homeTeam }}" id="{{ currentPick.awayTeam }}" value="away">
-                    <label class="form-check-label" for="{{ currentPick.awayTeam }}">
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.awayTeam }}" value="{{ currentPick.awayTeam }}">
+                        <label class="form-check-label" for="{{ currentPick.awayTeam }}">
                             {{ currentPick.awayTeam }}
                   </label>
+                    </div>
                 </div>
             </div>
-        </div>
-
-        </fieldset>
-        {% endfor %}
+            {% elif currentPick.pick == currentPick.awayTeam %}
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.homeTeam }}" value="{{ currentPick.homeTeam }}">
+                        <label class="form-check-label" for="{{ currentPick.homeTeam }}">
+                            {{ currentPick.homeTeam }}
+                  </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.awayTeam }}" value="{{ currentPick.awayTeam }}" checked>
+                        <label class="form-check-label" for="{{ currentPick.awayTeam }}">
+                            {{ currentPick.awayTeam }}
+                  </label>
+                    </div>
+                </div>
+            </div>
+            {% else %}
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.homeTeam }}" value="{{ currentPick.homeTeam }}">
+                        <label class="form-check-label" for="{{ currentPick.homeTeam }}">
+                            {{ currentPick.homeTeam }}
+                  </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.awayTeam }}" value="{{ currentPick.awayTeam }}">
+                        <label class="form-check-label" for="{{ currentPick.awayTeam }}">
+                            {{ currentPick.awayTeam }}
+                  </label>
+                    </div>
+                </div>
+            </div>
+            {% endif %}
+            </fieldset>
+            {% endfor %} {% csrf_token %}
+            <input type="submit" value="Save Picks">
+        </form>
     </div>
 </body>
 {% endblock %}
