Added command app to help with admin controls. Added score to keep track of user score per league and siplay on home page

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -82,6 +82,7 @@
                 <div class="card text-center">
                     <div class="card-body">
                         <h6 class="card-title">{{ currentUser.user }}</h6>
+                        <h4 class="card-title">{{ currentUser.score }}</h4>
                         <!--<img src="/static/media/bears.png" alt="Bears" class="img-thumbnail rounded float left img-fluid">-->
                     </div>
                 </div>
