--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -1,11 +1,17 @@
 {% extends "fantasyFootball/base.html" %} {% block page_content %}
 <div class="container">
     {% if form.errors %}
-    <p>Your username and password didn't match. Please try again.</p>
+    <div class="alert alert-danger" role="alert">
+        <strong>Invalid - </strong>Your username and password didn't match. Please try again.
+    </div>
     {% endif %} {% if next %} {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed, please login with an account that has access.</p>
+    <div class="alert alert-info" role="alert">
+        <strong>Alert - </strong>Your account doesn't have access to this super secret page. To proceed, please login with an account that has access.
+    </div>
     {% else %}
-    <p>Please login to see this page.</p>
+    <div class="alert alert-warning" role="alert">
+        Please login to see this page.
+    </div>
     {% endif %} {% endif %}
 
     <form method="POST" action="{% url 'login' %}">
