--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -8,14 +8,14 @@
                     {% if userLeagues %}
                     <div class="row">
                         <div class="col-sm-8">
-                            <h2 class="card-title">League Home: {{ userLeagues.0.name }}</h2>
+                            <h2 class="card-title">League Home: {{ activeLeague }}</h2>
                         </div>
                         <div class="col-sm-4">
                             <div class="dropdown">
                                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select League</button>
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                     {% for league in userLeagues %}
-                                    <a class="dropdown-item" type="submit">{{ league.name }}</a> {% endfor %}
+                                    <a class="dropdown-item" type="submit" href="/home/1/{{ league.name }}/">{{ league.name }}</a> {% endfor %}
                                 </div>
                             </div>
                         </div>
@@ -39,53 +39,78 @@
         <hr> {% if userLeagues %}
         <div class="row">
             <div class="col">
-                <h4>Leaderboard</h4>
-                <form action="" method="post">
-                    {% csrf_token %}
-                    <div class="form-group">
-                        <select class="form-control">
-                      <option value="1">Week 1</option>
-                      <option value="2">Week 2</option>
-                      <option value="3">Week 3</option>
-                      <option value="4">Week 4</option>
-                      <option value="5">Week 5</option>
-                      <option value="6">Week 6</option>
-                      <option value="7">Week 7</option>
-                      <option value="8">Week 8</option>
-                      <option value="9">Week 9</option>
-                      <option value="10">Week 10</option>
-                      <option value="11">Week 11</option>
-                      <option value="12">Week 12</option>
-                      <option value="13">Week 13</option>
-                      <option value="14">Week 14</option>
-                      <option value="15">Week 15</option>
-                      <option value="16">Week 16</option>
-                      <option value="17">Week 17</option>
-                    </select>
-                    </div>
-                    <input type="submit" value="Go to Week">
-                </form>
-                {% for currentGame in gameData %}
-                <div class="card text-center">
-                    <div class="card-body">
-                        <h6 class="card-title">{{ currentGame.homeTeam }} @ {{ currentGame.awayTeam }}</h6>
-                        <h7 class="card-text">{{ currentGame.homeScore }} - {{ currentGame.awayScore }}</h7>
-                        <h6 class="card-title">Your pick: {{ currentGame.pick }} </h6>
-                        <!--<img src="/static/media/bears.png" alt="Bears" class="img-thumbnail rounded float left img-fluid">-->
+                <div class="row">
+                    <h4>Games</h4>
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Select Week
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" href="/home/1/">Week 1</a>
+                            <a class="dropdown-item" href="/home/2/">Week 2</a>
+                            <a class="dropdown-item" href="/home/3/">Week 3</a>
+                            <a class="dropdown-item" href="/home/4/">Week 4</a>
+                            <a class="dropdown-item" href="/home/5/">Week 5</a>
+                            <a class="dropdown-item" href="/home/6/">Week 6</a>
+                            <a class="dropdown-item" href="/home/7/">Week 7</a>
+                            <a class="dropdown-item" href="/home/8/">Week 8</a>
+                            <a class="dropdown-item" href="/home/9/">Week 9</a>
+                            <a class="dropdown-item" href="/home/10/">Week 10</a>
+                            <a class="dropdown-item" href="/home/11/">Week 11</a>
+                            <a class="dropdown-item" href="/home/12/">Week 12</a>
+                            <a class="dropdown-item" href="/home/13/">Week 13</a>
+                            <a class="dropdown-item" href="/home/14/">Week 14</a>
+                            <a class="dropdown-item" href="/home/15/">Week 15</a>
+                            <a class="dropdown-item" href="/home/16/">Week 16</a>
+                            <a class="dropdown-item" href="/home/17/">Week 17</a>
+                        </div>
                     </div>
                 </div>
-                {% endfor %}
+                <div class=row>
+                    <table class="table">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th scope="col"></th>
+                                <th scope="col">Home</th>
+                                <th scope="col">Away</th>
+                                <th scope="col"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for currentGame in gameData %}
+                            <tr>
+                                <td><img src="/static/media/{{ currentGame.homeTeam }}.png" alt="{{ currentGame.homeTeam }}" class="img-fluid" width="50" height="50"></td>
+                                {% if currentGame.homeTeam == currentGame.winner %}
+                                <td class="text-success">{{ currentGame.homeTeam }} {{ currentGame.homeScore }}</td>
+                                <td class="text-danger">{{ currentGame.awayTeam }} {{ currentGame.awayScore }}</td>
+                                {% else %}
+                                <td class="text-danger">{{ currentGame.homeTeam }} {{ currentGame.homeScore }}</td>
+                                <td class="text-success">{{ currentGame.awayTeam }} {{ currentGame.awayScore }}</td>
+                                {% endif %}
+                                <td><img src="/static/media/{{ currentGame.awayTeam }}.png" alt="{{ currentGame.awayTeam }}" class="img-fluid" width="50" height="50"></td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
             </div>
             <div class="col">
                 <h4>Leaderboard</h4>
-                {% for currentUser in leagueUsers %}
-                <div class="card text-center">
-                    <div class="card-body">
-                        <h6 class="card-title">{{ currentUser.user }}</h6>
-                        <h4 class="card-title">{{ currentUser.score }}</h4>
-                        <!--<img src="/static/media/bears.png" alt="Bears" class="img-thumbnail rounded float left img-fluid">-->
-                    </div>
-                </div>
+                <table class="table">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th scope="col">Player</th>
+                            <th scope="col">Score</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for currentUser in leagueUsers %}
+                        <tr>
+                            <td>{{ currentUser.user }}</td>
+                            <td>{{ currentUser.score }}</td>
+                        </tr>
+                    </tbody>
+                </table>
                 {% endfor %}
             </div>
         </div>
