--- a/league/templates/league/createLeague.html
+++ b/league/templates/league/createLeague.html
@@ -1,7 +1,14 @@
 {% extends "fantasyFootball/base.html" %} {% block page_content %}
-<h1> Create a new League</h1>
-<form action="" method="POST">
-    {% csrf_token %} {{ form }}
-    <input type="submit" value="Submit">
-</form>
-{% endblock %}
+<div class="container">
+    <h1> Create a new League</h1>
+    {% if error %}
+    <div class="alert alert-danger" role="alert">
+        <strong>Error: </strong> {{ error }}
+    </div>{% endif %}
+
+    <form action="" method="POST">
+        {% csrf_token %} {{ form }}
+        <input type="submit" value="Submit">
+    </form>
+    {% endblock %}
+</div>
