Cleaned up login page and form validation. Added logic to prevent requesting to join a league more than once. Filtered join page based on leagues the user is not a part of.

--- a/fantasyFootball/templates/fantasyFootball/base.html
+++ b/fantasyFootball/templates/fantasyFootball/base.html
@@ -16,6 +16,8 @@
                 <div class="dropdown-menu">
                     <a href="/league/home/" class="dropdown-item">Home</a>
                     <a href="/picks/" class="dropdown-item">My Picks</a>
+                    <a href="/league/join/" class="dropdown-item">Join League</a>
+                    <a href="/league/create/" class="dropdown-item">Create League</a>
                 </div>
             </li>
         </ul>
