--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -1,5 +1,5 @@
-{% extends "fantasyFootball/base.html" %} {% block page_content %}
-<div class="container">
+{% block page_content %}
+<!--<div class="container">
     {% if form.errors %}
     <div class="alert alert-danger" role="alert">
         <strong>Invalid - </strong>Your username and password didn't match. Please try again.
@@ -27,10 +27,50 @@
             </tr>
         </table>
 
-        <!--<input type="submit" value="login">-->
         <button type="submit" class="btn btn-primary" value="login">Login</button>
         <input type="hidden" name="next" value="{{ next }}">
     </form>
     <a href="account/create">Create Account</a>
+</div>-->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<link href="/static/css/login.css" rel="stylesheet">
+<div class="container text-center">
+
+    <body>
+        <img class="mb-4" src="/static/media/logo.png" alt="" width="72" height="72">
+        <form class="form-signin" method="POST" action="{% url 'login' %}">
+            {% csrf_token %}
+            <h1 class="h3 mb-3 font-weight-normal">Fantasy Football Pool</h1>
+            <h6 class="font-weight-normal">Please sign in</h6>
+            {% if form.errors %}
+            <div class="alert alert-danger" role="alert">
+                <strong>Invalid - </strong>Your username and password didn't match. Please try again.
+            </div>
+            {% endif %} {% if next %} {% if user.is_authenticated %}
+            <div class="alert alert-info" role="alert">
+                <strong>Alert - </strong>Your account doesn't have access to this super secret page. To proceed, please login with an account that has access.
+            </div>
+            {% else %}
+            <div class="alert alert-warning" role="alert">
+                Please login to see this page.
+            </div>
+            {% endif %} {% endif %}
+            <label for="username" class="sr-only">{{ form.username.label_tag }}</label>
+            <input type="username" name="username" id="username" class="form-control" placeholder="Username" required autofocus>
+            <label for="password" class="sr-only">{{ form.password.label_tag }}</label>
+            <input type="password" name="password" id="password" class="form-control" placeholder="Password" required>
+            <div class="checkbox mb-3">
+                <label>
+          <!--<input type="checkbox" value="remember-me"> Remember me-->
+        </label>
+            </div>
+            <button type="submit" class="btn btn-primary" value="login">Login</button>
+            <input type="hidden" name="next" value="{{ next }}">
+            <div>
+                <a href="account/create">Create Account</a>
+            </div>
+            <p class="mt-5 mb-3 text-muted">&copy; 2020-2021</p>
+        </form>
+    </body>
 </div>
 {% endblock %}
