--- a/account/templates/registration/register.html
+++ b/account/templates/registration/register.html
@@ -1,13 +1,44 @@
 {% extends "fantasyFootball/base.html" %} {% block page_content %}
 <div class="container">
-    <h1> Create a new account</h1>
+    <h2>Create a new account</h2>
     {% if error %}
     <div class="alert alert-danger" role="alert">
         <strong>Error: </strong> {{ error }}
     </div>{% endif %}
+
     <form action="" method="POST">
-        {% csrf_token %} {{ form }}
-        <input type="submit" value="Submit">
+        {% csrf_token %}
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label>Username*</label>
+                <input type="text" class="form-control" id="username" name="username" placeholder="Username" required>
+            </div>
+            <div class="form-group col-md-6">
+                <label>Email*</label>
+                <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" placeholder="Email">
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label>Password*</label>
+                <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+            </div>
+            <div class="form-group col-md-6">
+                <label>Re-enter Password*</label>
+                <input type="password" class="form-control" id="password2" name="password2" placeholder="Re-enter Password">
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label>First Name</label>
+                <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name">
+            </div>
+            <div class="form-group col-md-6">
+                <label>Last Name</label>
+                <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name">
+            </div>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-    {% endblock %}
 </div>
+{% endblock %}
