--- a/league/templates/league/joinLeague.html
+++ b/league/templates/league/joinLeague.html
@@ -2,25 +2,30 @@
 
 <div class="container">
     <h4>Join a League</h4>
-    <!-- Search form -->
-    <input class="form-control" id="leagueSearch" type="text" placeholder="Search Leagues">
-    <br>
-    <ul class="list-group" id="myList">
-        {% for currentLeague in leagues %}
-        <li href="/league/join/{{ currentLeague.name }}" class="list-group-item" value="{{ currentLeague.name }}">{{ currentLeague.name }}</li> {% endfor %}
-    </ul>
-
-    <form method="POST" action="">
-        {% csrf_token %}
-        <select name="league">
-            <option selected="selected" disabled>Leagues</option>
-            {% for currentLeague in leagues %}
-            <option value="{{ currentLeague.name }}">{{ currentLeague.name }}</option>
+    <table id="leagueTable" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
+        <thead>
+            <tr>
+                <th class="th-sm">League Name
+                </th>
+                <th class="th-sm">Admin
+                </th>
+                <th class="th-sm">Request to Join
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for currentLeague in leagueData %}
+            <tr>
+                <td>{{ currentLeague.league.name }}</td>
+                <td>{{ currentLeague.league.admin.username }}</td>
+                {% if currentLeague.pendingRequest == True %}
+                <td>Request Pending</td>
+                {% else %}
+                <td><a href="/league/request/{{ currentLeague.name }}" class="btn btn-success" role="button">Request to Join</a></td>
+                {% endif %}
+            </tr>
             {% endfor %}
-        </select>
-        <input type="submit" value="Select">
-    </form>
-
+        </tbody>
+    </table>
 </div>
-</form>
 {% endblock %}
