--- a/league/templates/league/leagueHome.html
+++ b/league/templates/league/leagueHome.html
@@ -2,89 +2,62 @@
 
 <body>
     <div class="container">
+
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+                <h1 class="display-4">{{ activeLeague }}</h1>
+                {% if leagueAdmin == True %}
+                <a href="/league/admin/{{ activeLeague }}" class="btn btn-info" disabled role="button">League Settings</a>{% endif %}
+            </div>
+        </div>
+
         <div class="row">
-            <div class="card text-center">
-                <div class="card-header">
-                    <div class="card-body">
-                        {% if userLeagues %}
-                        <div class="row">
-                            <div class="col-sm-8">
-                                <h2 class="card-title">{{ activeLeague }}</h2>
-                            </div>
-                            <div class="col-sm-4">
-                                <div class="dropdown">
-                                    <button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select League</button>
-                                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                        {% for league in userLeagues %}
-                                        <a class="dropdown-item" type="submit" href="/league/home/{{ league.name }}">{{ league.name }}</a> {% endfor %}
-                                    </div>
-                                </div>
-                            </div>
+            <div class="col-8">
+                <!--<main role="main" class="container bootdey.com">-->
+                <div class="overflow-auto" style="height: 500px; overflow-y:auto">
+                    <div class="my-3 p-3 bg-white rounded box-shadow">
+                        <h6 class="border-bottom border-gray pb-2 mb-0 ">Message Board</h6>
+                        {% for currentMessage in leagueMessages %}
+                        <div class="media text-muted pt-3 ">
+                            <img src="https://bootdey.com/img/Content/avatar/avatar7.png " alt=" " class="mr-2 rounded " width="32 " height="32 ">
+                            <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray ">
+                                <strong class="d-block text-gray-dark ">@{{ currentMessage.user.username }}</strong>{{ currentMessage.message }}
+                            </p>
                         </div>
-                        {% else %}
-                        <div class="row">
-                            <div class="col-6">
-                                <h4 class="card-title">You are not currently part of any leagues. Create or join one now!</h4>
-                            </div>
-                            <div class="co3">
-                                <a href="/league/create/" class="btn btn-info" role="button">Create League</a>
-                            </div>
-                            <div class="col-3">
-                                <a href="/league/join/" class="btn btn-info" disabled role="button">Join League</a>
-                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+                <!--</main>-->
+                <form method="POST" action="">
+                    {% csrf_token %}
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="Type message" aria-label="Message" name="message" aria-describedby="basic-addon2 ">
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-secondary " type="submit">Send</button>
+                            <!--<input type="submit " class="btn btn-outline-secondary " value="Send ">-->
                         </div>
-                        {% endif %}
                     </div>
-                </div>
+                </form>
             </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-8">
-            <!--<main role="main" class="container bootdey.com">-->
-            <div class="overflow-auto" style="height: 500px; overflow-y:auto">
-                <div class="my-3 p-3 bg-white rounded box-shadow">
-                    <h6 class="border-bottom border-gray pb-2 mb-0 ">Message Board</h6>
-                    {% for currentMessage in leagueMessages %}
-                    <div class="media text-muted pt-3 ">
-                        <img src="https://bootdey.com/img/Content/avatar/avatar7.png " alt=" " class="mr-2 rounded " width="32 " height="32 ">
-                        <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray ">
-                            <strong class="d-block text-gray-dark ">@{{ currentMessage.user.username }}</strong>{{ currentMessage.message }}
-                        </p>
-                    </div>
-                    {% endfor %}
-                </div>
+            <div class="col-4 ">
+                <h5>Standings</h5>
+                <table class="table">
+                    <thead class="thead-dark ">
+                        <tr>
+                            <th scope="col ">Player</th>
+                            <th scope="col ">Score</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for currentUser in leagueUsers %}
+                        <tr>
+                            <td>{{ currentUser.user }}</td>
+                            <td>{{ currentUser.score }}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
             </div>
-            <!--</main>-->
-            <form method="POST" action="">
-                {% csrf_token %}
-                <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Type message" aria-label="Message" name="message" aria-describedby="basic-addon2 ">
-                    <div class="input-group-append">
-                        <button class="btn btn-outline-secondary " type="submit">Send</button>
-                        <!--<input type="submit " class="btn btn-outline-secondary " value="Send ">-->
-                    </div>
-                </div>
-            </form>
-        </div>
-        <div class="col-4 ">
-            <h5>Standings</h5>
-            <table class="table">
-                <thead class="thead-dark ">
-                    <tr>
-                        <th scope="col ">Player</th>
-                        <th scope="col ">Score</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for currentUser in leagueUsers %}
-                    <tr>
-                        <td>{{ currentUser.user }}</td>
-                        <td>{{ currentUser.score }}</td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
         </div>
     </div>
 </body>
